--- a/crowdvest_firestore/src/index.css
+++ b/crowdvest_firestore/src/index.css
@@ -10,9 +10,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
-  background: url(/img/swag.png) no-repeat;
-  background-size: cover;
-  background-position: bottom;
+  background: #FDC830;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #F37335, #FDC830);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #F37335, #FDC830); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 code {
